--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
   <h2>ACADEMIC ASSIGNMENT WRITTING</h2>
   <div class="card">
     <h3> ESSAYS </h3>
-    <img src="photo.JPG.jpg" alt="Abo" width="100%">
+    <img src="photo.JPG.jpg" alt="" width="100%">
   <div class="container">
     <p>In this section you will find information related to eassys writtings </p>
     <ul>
@@ -23,4 +23,3 @@
 
 </body>
 </html>
-
